demo video and images

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,9 @@
-org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+distributionBase=GRADLE_USER_HOME
+distributionPath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.7-all.zip
+
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
