--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,37 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
-
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+# Flutter/Dart
 .dart_tool/
+.build/
+.packages
+.pub-cache/
 .flutter-plugins
 .flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
+pubspec.lock
 
-# Symbolication related
-app.*.symbols
+# IDEs
+.idea/
+.vscode/
 
-# Obfuscation related
-app.*.map.json
+# Build outputs
+build/
+**/build/
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Local configuration
+local.properties
+
+# Crash dumps
 android/*.hprof
-android/*.hprof
-android/*.hprof
-demo/*.mp4
-demo/*.mp4
-android/*.hprof
+
+# Gradle
+.gradle/
+gradle-wrapper.jar
+gradlew
+gradlew.bat
+
+# Generated files
+GeneratedPluginRegistrant.java
+
+# Keystore
+key.properties
+**/*.keystore
+**/*.jks
 android/*.hprof
